css fix overlapping border

--- a/style/index.css
+++ b/style/index.css
@@ -27,6 +27,7 @@ a {
   padding: 10px 0;
   border-bottom: 1px solid #dee2e6;
   border-top: 1px solid #dee2e6;
+  margin-top: -1px;
 }
 
 .modal.right .modal-dialog {
